--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Hello, world! {{ vars.test_var }}
       - name: Print env
         run: env
 
