--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -4,6 +4,9 @@ name: CI
 
 # Controls when the workflow will run
 on:
+
+  push: 
+    branches: 'test'
   # Triggers the workflow on push or pull request events but only for the "main" branch
   
 
