--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -19,8 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     # Map a step output to a job output
     outputs:
-      output1: ${{ steps.step1.outputs }}
-      output2: ${{ steps.step2.outputs}}
+      output1: ${{ steps.step1.outputs.test }}
+      output2: ${{ steps.step2.outputs.test }}
     steps:
       - id: step1
         run: echo "test=hello" >> "$GITHUB_OUTPUT"
@@ -30,8 +30,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - env:
-          OUTPUT1: ${{needs.job1.outputs.output1}}
-          OUTPUT2: ${{needs.job1.outputs.output2}}
-        run: echo "$OUTPUT1 $OUTPUT2"
+     
+        - run: echo "$OUTPUT1 $OUTPUT2"
+          env:
+           OUTPUT1: ${{needs.job1.outputs.output1}}
+           OUTPUT2: ${{needs.job1.outputs.output2}}
+        - name: Create annotation for build error
+          run: echo "::error file=app.js,line=1::Missing semicolon"
     
