--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -39,4 +39,6 @@ jobs:
           run: echo "::error file=app.js,line=1::Missing semicolon"
         - name: Testing debug
           run: echo "::debug::Set the Octocat variable"
+        - name: print environment
+          run: env
     
