--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -39,7 +39,7 @@ jobs:
           run: echo "::error file=app.js,line=1::Missing semicolon"
         - name: Testing debug
           run: echo "::debug::Set the Octocat variable"
-        - name: print environment
-          if: ${{ secrets.AZURE_TEST != '' }}
+        - if: ${{ secrets.AZURE_TEST != '' }}
+          name: print environment
           run: env
     
