--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     env:
-     TEST_ENV: ${{ secrets.AZURE_TEST }}
+     TEST_ENV: ${{ secrets.AZURE_SECRET }}
     steps:
      
         - run: echo "$OUTPUT1 $OUTPUT2"
