--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -52,6 +52,6 @@ jobs:
     - run: echo "Test"
     - run: exit 1
       id: bad
-      continue-on-error: true
+      #continue-on-error: true
     - run: echo "OK"
       if: job.steps.bad.status == failure()    
